@@ -177,7 +177,7 @@ if test x$with_glib = x ; then
 
   AM_PATH_GLIB(1.1.6,,
     AC_MSG_ERROR([
-*** GLIB 1.1.5 or better is required. The latest version of GLIB
+*** GLIB 1.1.6 or better is required. The latest version of GLIB
 *** is always available from ftp://ftp.gtk.org.]),
     gmodule)
 
