@@ -1,4 +1,4 @@
-.TH GTK+ 1 "25 October 1998" Version 1.1.5
+.TH GTK+ 1 "25 October 1998" Version 1.1.6
 .SH NAME
 gtk-config - script to get information about the installed version of GTK+
 .SH SYNOPSIS
